Pae title bug fixed and category links bug fixed on mobile.

--- a/assets/theme-styles/sections/single.less
+++ b/assets/theme-styles/sections/single.less
@@ -69,7 +69,12 @@
 			border: solid 1px fade(@content, 80%);
 			border-radius: 4px;
 			margin-right: 8px;
-			
+			@media screen and (max-width:767px) {
+				padding: 4px 4px;
+				font-size: 10px;
+				margin-right: 2px;
+				display: inline-block;
+			}
 		}
 	}
 	#featured-image {
